--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<style type="text/css">
 		body {
 			font-size: 18px;
-			font-family: 'Arial';
+			font-family: 'Arial'; 
 			background: #e7e7e7;
 		}
 
@@ -35,6 +35,11 @@
 			width: 75%;
 		}
 
+		table th,
+		table td {
+			/*padding: 5px;*/
+			/*border: 1px solid #ccc;*/
+		}
 
 		.user-img {
 			width: 50px;
@@ -42,18 +47,9 @@
 			/*		border-radius: 50%;*/
 		}
 	</style>
-<style id="monica-reading-highlight-style">
-        .monica-reading-highlight {
-          animation: fadeInOut 1.5s ease-in-out;
-        }
+</head>
 
-        @keyframes fadeInOut {
-          0%, 100% { background-color: transparent; }
-          30%, 70% { background-color: rgba(2, 118, 255, 0.20); }
-        }
-      </style></head>
-
-<body data-new-gr-c-s-check-loaded="14.1192.0" data-gr-ext-installed="" monica-version="5.10.5" monica-id="ofpnmcalabcbjgholdjcjblkibolbppb">
+<body>
 
 	<div id="print-table">
 		<div class="card" style="width:600px !important; margin:0 auto;" id="print-pdf">
@@ -64,6 +60,11 @@
 			</div>
 			<table class="m17 jb jb1 table table-bordered" style="width:100% !important">
 				<tbody>
+					<tr>
+						<th>Ref. number</th>
+						<td id = "refno" style="color:blue;">
+							20250310403765						</td>
+					</tr>
 					<tr>
 						<th>Stadium</th>
 						<td>
@@ -80,50 +81,45 @@
 							room 1						</td>
 					</tr>
 					<tr>
-						<th>Applicant name</th>
+						<th>Name</th>
 						<td>
 														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=VU21CSEN0500021" class="user-img"> VUPPALA ABHINAVA RISHI CHANDRA						</td>
 					</tr>
 					<tr>
-						<th>Applicant department</th>
+						<th>Department</th>
 						<td>
 							CSE						</td>
 					</tr>
 					<tr>
-						<th>Applicant campus</th>
+						<th>Campus</th>
 						<td>
 							GIT, Visakhapatnam						</td>
 					</tr>
 					<tr>
-						<th>Applicant mobile</th>
-						<td>
-							9502946364						</td>
+						<th>Mobile</th>
+						<td style="color:blue;">
+							8897558829						</td>
 					</tr>
 					<tr>
-						<th>Applicant e-mail</th>
+						<th>E-mail</th>
 						<td>
 							avuppala2@gitam.in						</td>
 					</tr>
 										<tr>
 						<th>Booking date</th>
-						<td id="booking-date">Loading...</td>
-
+						<td id = "asker">
+							06-Mar-2025						</td>
 					</tr>
 					<tr>
 						<th>Booking slot</th>
-						<td>
-							05:00 PM to 06:00 PM						</td>
+						<td style="color:red;">
+							07:00 AM to 08:00 AM						</td>
 					</tr>
 
 					<tr>
-						<th>Registration fee</th>
+						<th>Amount</th>
 						<td>
 							FREE						</td>
-					</tr>
-					<tr>
-						<th>Reference number</th>
-						<td>
-							20241224805043						</td>
 					</tr>
 					<tr>
 						<th>Status</th>
@@ -139,7 +135,7 @@
 			</table>
 		</div>
 
-		<div style="text-align: center;" id="print-btn"><button class="btn btn-primary" onclick="printpage();" type="button">Download</button></div>
+<!-- 		<div style="text-align: center;" id="print-btn"><button class="btn btn-primary" onclick="printpage();" type="button">Download</button></div> -->
 	</div>
 	<br>
 
@@ -151,7 +147,7 @@
 		function printpage() {
 
 			document.getElementById("print-btn").style.display = 'none';
-			var fileName = '20240824805043' + ".pdf";
+			var fileName = '20240910403765' + ".pdf";
 			html2canvas(document.getElementById('print-pdf'), {
 				onrendered: function(canvas) {
 					var data = canvas.toDataURL();
@@ -165,16 +161,6 @@
 				}
 			});
 		}
-		function formatDate(date) {
-      const options = { year: 'numeric', month: 'short', day: 'numeric' };
-      return date.toLocaleDateString(undefined, options);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const today = new Date();
-      document.getElementById('booking-date').textContent = formatDate(today);
-    });
-
 	</script>
 	<style>
 		td {
@@ -186,6 +172,210 @@
 		}
 	</style>
 
+  <script>
+		n =  new Date();
+		y = n.getFullYear();
+		m = n.getMonth();
+		d = n.getDate();
+		d = d<10 ? "0" + d : d;
+		var mon = ["Jan", "Feb","Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov","Dec"];
+		document.getElementById("asker").innerHTML = d + "-" + mon[m] + "-" + y;
+
+		x = n.getMonth() + 1;
+		x = x<10 ? "0" + x : x;
+		document.getElementById("refno").innerHTML = ""+y+""+x+"0"+"974873";
+	</script>
+
 	
 
-<div id="monica-content-root" class="monica-widget"></div></body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
+</body></html><html lang=""><head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://gsports.gitam.edu/assets/css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://gsports.gitam.edu/assets/font-awesome/css/font-awesome.min.css">
+
+	<title></title>
+	<style type="text/css">
+		body {
+			font-size: 18px;
+			font-family: 'Arial'; 
+			background: #e7e7e7;
+		}
+
+		#print-table {
+			margin: 0 auto;
+			width: 800px;
+			background: #fff;
+			padding: 20px;
+		}
+
+		table {
+			margin: 0 auto;
+		}
+
+		table th {
+			font-weight: bold;
+			text-align: left;
+			width: 25%;
+		}
+
+		table td {
+			/*text-align: center;*/
+			width: 75%;
+		}
+
+		table th,
+		table td {
+			/*padding: 5px;*/
+			/*border: 1px solid #ccc;*/
+		}
+
+		.user-img {
+			width: 50px;
+			/*		height: 50px;*/
+			/*		border-radius: 50%;*/
+		}
+	</style>
+</head>
+
+<body>
+
+	<div id="print-table">
+		<div class="card" style="width:600px !important; margin:0 auto;" id="print-pdf">
+			<div class="logo text-center">
+				<!-- <img src="https://gsports.gitam.edu/assets/images/GITAM_logo.png" class="gitam-logo-1" height="50"> -->
+				<img src="https://cdn.gitam.edu/images/logo/gitam-new-logo.png" class="gitam-logo-1" height="50">
+				<h3>Reservation information</h3>
+			</div>
+			<table class="m17 jb jb1 table table-bordered" style="width:100% !important">
+				<tbody>
+					<tr>
+						<th>Ref. number</th>
+						<td id = "refno" style="color:blue;">
+							20250310403765						</td>
+					</tr>
+					<tr>
+						<th>Stadium</th>
+						<td>
+							Fitness &amp; Performance Centre						</td>
+					</tr>
+					<tr>
+						<th>Playground</th>
+						<td>
+							Fitness &amp; Performance Centre						</td>
+					</tr>
+					<tr>
+						<th>Court</th>
+						<td>
+							room 1						</td>
+					</tr>
+					<tr>
+						<th>Name</th>
+						<td>
+														<img src="https://doeresults.gitam.edu/photo/img.aspx?id=VU21CSEN0500007" class="user-img"> YARKAREDDY SUKUMAR REDDY						</td>
+					</tr>
+					<tr>
+						<th>Department</th>
+						<td>
+							CSE						</td>
+					</tr>
+					<tr>
+						<th>Campus</th>
+						<td>
+							GIT, Visakhapatnam						</td>
+					</tr>
+					<tr>
+						<th>Mobile</th>
+						<td style="color:blue;">
+							8897558829						</td>
+					</tr>
+					<tr>
+						<th>E-mail</th>
+						<td>
+							syarkare@gitam.in						</td>
+					</tr>
+										<tr>
+						<th>Booking date</th>
+						<td id = "asker">
+							11-Sep-2024						</td>
+					</tr>
+					<tr>
+						<th>Booking slot</th>
+						<td style="color:red;">
+							07:00 AM to 08:00 AM						</td>
+					</tr>
+
+					<tr>
+						<th>Amount</th>
+						<td>
+							FREE						</td>
+					</tr>
+					<tr>
+						<th>Status</th>
+						<td>
+							<b>Approved</b>						</td>
+					</tr>
+					<tr>
+						<th>Remarks</th>
+						<td>
+							<b>Approved</b>						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+<!-- 		<div style="text-align: center;" id="print-btn"><button class="btn btn-primary" onclick="printpage();" type="button">Download</button></div> -->
+	</div>
+	<br>
+
+	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script> -->
+	<script type="text/javascript" src="https://gsports.gitam.edu/assets/js/pdfmake.min.js"></script>
+	<script type="text/javascript" src="https://gsports.gitam.edu/assets/js/html2canvas.min.js"></script>
+	<script type="text/javascript">
+		function printpage() {
+
+			document.getElementById("print-btn").style.display = 'none';
+			var fileName = '20240910403765' + ".pdf";
+			html2canvas(document.getElementById('print-pdf'), {
+				onrendered: function(canvas) {
+					var data = canvas.toDataURL();
+					var docDefinition = {
+						content: [{
+							image: data,
+							width: 500,
+						}]
+					};
+					pdfMake.createPdf(docDefinition).download(fileName);
+				}
+			});
+		}
+	</script>
+	<style>
+		td {
+			white-space: nowrap;
+		}
+
+		th {
+			white-space: nowrap;
+		}
+	</style>
+
+  <script>
+		n =  new Date();
+		y = n.getFullYear();
+		m = n.getMonth();
+		d = n.getDate();
+		d = d<10 ? "0" + d : d;
+		var mon = ["Jan", "Feb","Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov","Dec"];
+		document.getElementById("asker").innerHTML = d + "-" + mon[m] + "-" + y;
+
+		x = n.getMonth() + 1;
+		x = x<10 ? "0" + x : x;
+		document.getElementById("refno").innerHTML = ""+y+""+x+"0"+"974873";
+	</script>
+
+	
+
+</body></html>
